# cli2c

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  firmware.code-workspace
cli2c/: main.c
cli2c.xcodeproj/: project.pbxproj
cli2c.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cli2c.xcodeproj/xcshareddata/xcschemes/: All.xcscheme  cli2c.xcscheme  matrix.xcscheme  segment.xcscheme
cli2c/cli2c/: Info.plist  main.c  main.h
cli2c/common/: ht16k33.c  ht16k33.h  i2cdriver.c  i2cdriver.h  utils.c  utils.h
cli2c/matrix/: Info.plist  ht16k33-matrix.c  ht16k33-matrix.h  ltp305-matrix.c  ltp305-matrix.h  main.c  main.h
cli2c/segment/: Info.plist  ht16k33-segment.c  ht16k33-segment.h  main.c  main.h
examples/: cpu_chart.py  cpu_chart_matrix.py  cpu_chart_matrix_ltp.py  cpu_chart_matrix_ltp305.py  cpu_chart_segment.py  mcp9808_temp.py  mcp9809_temp.py
firmware/common/: debug.c  debug.h  errors.h  gpio.c  gpio.h  i2c.c  i2c.h  led.c  led.h  segment.c  segment.h  serial.c  serial.h  spi.c  spi.h
firmware/pico/: CMakeLists.txt  main.c  main.h  pico_led.c  pico_led.h  pins.c
firmware/promicro/: CMakeLists.txt  main.c  main.h  pins.c
firmware/qtpy/: CMakeLists.txt  main.c  main.h  pins.c  ws2812.c  ws2812.h
firmware/tiny/: CMakeLists.txt  main.c  main.h  pins.c  tiny_led.c  tiny_led.h
firmware/trinkey/: CMakeLists.txt  main.c  main.h  pins.c
linux/: CMakeLists.txt
segment/: main.c
